--- a/01_agama/samyukta/01/SA1_45.md
+++ b/01_agama/samyukta/01/SA1_45.md
@@ -82,7 +82,7 @@ next: SA1_46.html
     <td id='p17'>17. “‘Kātyāyana, someone who truely and correctly contemplates the formation of the world won’t give rise to the view that the world doesn’t exist. Truly and correctly contemplating the cessation of the world, they won’t give rise to the view that the world exists.<sup id="ref5"><a href="#n5">5</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66c25'>迦旃延！如來離於二邊，說於中道，所謂此有故彼有，此生故彼生，謂緣無明有行，乃至生、老、病、死、憂、悲、[1]惱、苦集；所謂此無故彼無，此滅故彼滅，謂無明[2]滅則行滅，乃至生、老、病、死、憂、悲、惱、苦滅。』」</td>
+    <td class="ch" title='t125.2.66c25'>迦旃延！如來離於二邊，說於中道，所謂此有故彼有，此生故彼生，謂緣無明有行，乃至生、老、病、死、憂、悲、惱、苦集；所謂此無故彼無，此滅故彼滅，謂無明滅則行滅，乃至生、老、病、死、憂、悲、惱、苦滅。』」</td>
     <td id='p18'>18. “‘Kātyāyana, the Tathāgata has abandoned these two extreme positions and teaches the middle way. That is, “That exists because this exists. That arises because this arose.” This refers to there being action because of ignorance … and then birth, old age, illness, death, sorrow, lamentation, trouble, and suffering form. That is, “That doesn’t exist because this doesn’t exist. That ceases because this ceased.” This refers to action ceasing when ignorance ceases … and then birth, old age, illness, death, sorrow, lamentation, trouble, and pain cease.’”</td>
   </tr>
   <tr>
