typos typos typos

--- a/01_agama/samyukta/01/SA1_45.md
+++ b/01_agama/samyukta/01/SA1_45.md
@@ -90,11 +90,11 @@ next: SA1_46.html
     <td id='p19'>19. When Venerable Ānanda taught this Dharma, the monk Chandaka became free of dust and defilement, and his Dharma eye was purified. The monk Chandaka then saw the Dharma, knew the Dharma, produced the Dharma, and went beyond any uncertainty. He became confident about the Dharma taught by the great teacher without relying on others.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.67a8'>恭敬合掌白尊者阿難言：「正應如是。如是智慧梵行，善知識教授教誡說法。我今從尊者阿難所，聞如是法，於一切行皆空、皆[3]悉寂、不可得、愛盡、離欲、滅盡、涅槃，心樂正住解脫，不復轉還，不復見我，唯見正法。」</td>
+    <td class="ch" title='t125.2.67a8'>恭敬合掌白尊者阿難言：「正應如是。如是智慧梵行，善知識教授教誡說法。我今從尊者阿難所，聞如是法，於一切行皆空、皆悉寂、不可得、愛盡、離欲、滅盡、涅槃，心樂正住解脫，不復轉還，不復見我，唯見正法。」</td>
     <td id='p20'>20. He then saluted Venerable Ānanda with his palms together and said, “Precisely as it should be! Thus does a wise and good friend in the religious life teach, confer, and instruct another in the Dharma. Now, I’ve heard the Dharma in this way from Venerable Ānanda. All actions are empty. They are all peaceful and unobtainable. Craving has ended, and I’ve become free of desire. With complete cessation and <em>nirvāṇa</em>, the mind is happy, properly abiding, and liberated. It doesn’t revert back again and doesn’t have views of self anymore. One only sees the correct Dharma.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.67a16'>時，阿難語闡陀言：「汝今得大善利，於甚深佛法中，得聖慧[4]眼。」</td>
+    <td class="ch" title='t125.2.67a16'>時，阿難語闡陀言：「汝今得大善利，於甚深佛法中，得聖慧眼。」</td>
     <td id='p21'>21. Ānanda said to Chandaka, “Now, you’ve gained a great and good benefit, having obtained the noble wisdom eye of the profound Buddha Dharma.”</td>
   </tr>
   <tr>
@@ -107,9 +107,9 @@ next: SA1_46.html
 </tr>
 <tr>
   <td class="ch" title='t99.2.xxxx'><ul class='verse'>
-    <li>[5]輸屢那三種<br/>
+    <li>輸屢那三種<br/>
     無明亦有三<br/>
-    無[6]間等及滅<br/>
+    無間等及滅<br/>
     富留那、闡陀</li>
   </ul></td>
   <td><ul class='verse'>
